--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_URL=mysql+mysqlconnector://root@localhost/inmobiliariadb
 FLASK_DEBUG=True
 FLASK_RUN_HOST=127.0.0.1
 FLASK_RUN_PORT=5000
+FLASK_ENV=production
